--- a/ui.apps/pom.xml
+++ b/ui.apps/pom.xml
@@ -58,6 +58,7 @@
                 <artifactId>filevault-package-maven-plugin</artifactId>
                 <configuration>
                     <filterSource>${basedir}/src/main/content/META-INF/vault/filter.xml</filterSource>
+                    <acHandling>merge_preserve</acHandling>
                 </configuration>
             </plugin>
         </plugins>
